# llmops-production-rag

./: .gitignore  MAINTAINER.md  Makefile  README.md  app.py  pyproject.toml  requirements.lock.txt  requirements.txt  workshop.ipynb  workshop.qmd
config/: chunksize_experiment.yaml  embedding_model_experiment.yaml  prompt_experiment.yaml  reranking_experiment.yaml  search_params_experiment.yaml  splitter_experiment.yaml
llmops_rag/: _version.py  agentic_rag.py  annotate_data.py  config.py  create_annotated_dataset.py  create_llm_filtered_dataset.py  create_qa_dataset.py  eval_dataset.py  hpo.py  hyperparam_opt.py  image.py  optimize_rag.py  rag_agentic.py  rag_basic.py  reactive_pipeline.py  synthesize_data.py  utils.py  vector_store.py
streamlit/: app.py
